<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center|top">

    <TextView
            android:text="@string/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:textAlignment="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="60dp"
            android:textSize="30sp"
    />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/alive_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"/>
            <TextView
                    android:text="@string/dead_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_weight="1"/>
            <TextView
                    android:text="@string/grid_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/ac" android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:entries="@array/Color_array"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/dc" android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:entries="@array/Color_array"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/gc" android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:entries="@array/Color_array"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp">
        <TextView
                android:text="@string/stepping_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                android:layout_margin="10dp"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/stepspeed" android:layout_margin="10dp" android:autofillHints="0"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="horizontal">
    <Button
            android:text="@string/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/applybtn" android:layout_margin="10dp"/>
    <Button
            android:text="Test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/testbtn" android:layout_margin="10dp"/>
</LinearLayout>
</LinearLayout>
